kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-color-app
spec: {}
status: {}
