kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-color-app-deployment
  namespace: test-color-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-color-app
  template:
    metadata:
      labels:
        app: test-color-app
    spec:
      containers:
      - name: test-color-app
        image: 5470/test-color-app:latest
        ports:
        - containerPort: 5000
