kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-color-app-service
spec:
  selector:
    app: test-color-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
